Introduce startGame, refactor state & misc fixes